# Deep_Thinking_Trading_Bot

./: .gitignore  README.md  api_server.py  auto_executor.py  autonomous_trading_system.py  ccxt_provider.py  code.ipynb  config_manager.py  demonstration_run.py  execution_manager.py  local_broker.py  momentum_scanner.py  requirements.txt  roostoo_client.py  roostoo_manager.py  status.json  sync_portfolio.py  test.json  test_execution_speed.py  trading_bias.json  trading_bot_opensource.py  virtual_portfolio.json
Trading-Bot/: .gitignore  Cargo.toml  README.md  Robust Trading Bot Tech Stack - Robust Trading Bot Tech Stack.csv  build.rs  requirements.txt  strategy_engine.py
Trading-Bot/logic/: indicators.py
Trading-Bot/proto/: trading.proto  trading_pb2.py
Trading-Bot/src/: auth.rs  client.rs  main.rs  market_data.rs  risk_gate.rs  state.rs  utils.rs
scratch/: test_gemini.py  test_gemini_requests.py  test_groq.py  test_groq_requests.py
