[package]
name = "roostoo-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
prost = "0.12"
zmq = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
hex = "0.4"
url = "2.5"
bytes = "1.5"
thiserror = "1.0"
smallvec = "1.13"
ring = "0.17"

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3.0.0"
